cmake_minimum_required (VERSION 2.6...3.10.2)
project (CGenerator C)

cmake_policy(SET CMP0063 NEW)

set(CMAKE_C_VISIBILITY_PRESET default)
set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=implicit-function-declaration")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=missing-declarations")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Werror=int-conversion")

option(BUILD_SHARED_LIBS "Build using shared libraries" ON)

find_package(OpenSSL)

if (OPENSSL_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DOPENSSL")
    if(CMAKE_VERSION VERSION_LESS 3.4)
        include_directories(${OPENSSL_INCLUDE_DIR})
        include_directories(${OPENSSL_INCLUDE_DIRS})
        link_directories(${OPENSSL_LIBRARIES})
    endif()
endif()

set(pkgName "telegram_bot_api")

# this default version can be overridden in PreTarget.cmake
set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 1)

if( (DEFINED CURL_INCLUDE_DIR) AND (DEFINED CURL_LIBRARIES))
    include_directories(${CURL_INCLUDE_DIR})
    set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
else()
    find_package(CURL 7.58.0 REQUIRED)
    if(CURL_FOUND)
        include_directories(${CURL_INCLUDE_DIR})
        set(PLATFORM_LIBRARIES ${PLATFORM_LIBRARIES} ${CURL_LIBRARIES} )
    endif()
endif()

set(SRCS
    src/list.c
    src/apiKey.c
    src/apiClient.c
    src/binary.c
    external/cJSON.c
    model/object.c
    model/accepted_gift_types.c
    model/add_sticker_to_set_request.c
    model/add_sticker_to_set_response.c
    model/affiliate_info.c
    model/animation.c
    model/answer_callback_query_request.c
    model/answer_callback_query_response.c
    model/answer_inline_query_request.c
    model/answer_inline_query_response.c
    model/answer_pre_checkout_query_request.c
    model/answer_pre_checkout_query_response.c
    model/answer_shipping_query_request.c
    model/answer_shipping_query_response.c
    model/answer_web_app_query_request.c
    model/answer_web_app_query_response.c
    model/approve_chat_join_request_request.c
    model/approve_chat_join_request_response.c
    model/audio.c
    model/background_fill.c
    model/background_fill_freeform_gradient.c
    model/background_fill_gradient.c
    model/background_fill_solid.c
    model/background_type.c
    model/background_type_chat_theme.c
    model/background_type_fill.c
    model/background_type_pattern.c
    model/background_type_wallpaper.c
    model/ban_chat_member_request.c
    model/ban_chat_member_request_chat_id.c
    model/ban_chat_member_response.c
    model/ban_chat_sender_chat_request.c
    model/ban_chat_sender_chat_response.c
    model/birthdate.c
    model/bot_command.c
    model/bot_command_scope.c
    model/bot_command_scope_all_chat_administrators.c
    model/bot_command_scope_all_group_chats.c
    model/bot_command_scope_all_private_chats.c
    model/bot_command_scope_chat.c
    model/bot_command_scope_chat_administrators.c
    model/bot_command_scope_chat_chat_id.c
    model/bot_command_scope_chat_member.c
    model/bot_command_scope_default.c
    model/bot_description.c
    model/bot_name.c
    model/bot_short_description.c
    model/business_bot_rights.c
    model/business_connection.c
    model/business_intro.c
    model/business_location.c
    model/business_messages_deleted.c
    model/business_opening_hours.c
    model/business_opening_hours_interval.c
    model/callback_query.c
    model/chat.c
    model/chat_administrator_rights.c
    model/chat_background.c
    model/chat_boost.c
    model/chat_boost_added.c
    model/chat_boost_removed.c
    model/chat_boost_source.c
    model/chat_boost_source_gift_code.c
    model/chat_boost_source_giveaway.c
    model/chat_boost_source_premium.c
    model/chat_boost_updated.c
    model/chat_full_info.c
    model/chat_invite_link.c
    model/chat_join_request.c
    model/chat_location.c
    model/chat_member.c
    model/chat_member_administrator.c
    model/chat_member_banned.c
    model/chat_member_left.c
    model/chat_member_member.c
    model/chat_member_owner.c
    model/chat_member_restricted.c
    model/chat_member_updated.c
    model/chat_permissions.c
    model/chat_photo.c
    model/chat_shared.c
    model/chosen_inline_result.c
    model/close_forum_topic_request.c
    model/close_forum_topic_response.c
    model/close_general_forum_topic_request.c
    model/close_general_forum_topic_response.c
    model/close_response.c
    model/contact.c
    model/convert_gift_to_stars_request.c
    model/convert_gift_to_stars_response.c
    model/copy_message_request.c
    model/copy_message_response.c
    model/copy_messages_request.c
    model/copy_messages_response.c
    model/copy_text_button.c
    model/create_chat_invite_link_request.c
    model/create_chat_invite_link_response.c
    model/create_chat_subscription_invite_link_request.c
    model/create_chat_subscription_invite_link_request_chat_id.c
    model/create_chat_subscription_invite_link_response.c
    model/create_forum_topic_request.c
    model/create_forum_topic_response.c
    model/create_invoice_link_request.c
    model/create_invoice_link_response.c
    model/create_new_sticker_set_request.c
    model/create_new_sticker_set_response.c
    model/decline_chat_join_request_request.c
    model/decline_chat_join_request_response.c
    model/delete_business_messages_request.c
    model/delete_business_messages_response.c
    model/delete_chat_photo_request.c
    model/delete_chat_photo_response.c
    model/delete_chat_sticker_set_request.c
    model/delete_chat_sticker_set_response.c
    model/delete_forum_topic_request.c
    model/delete_forum_topic_response.c
    model/delete_message_request.c
    model/delete_message_response.c
    model/delete_messages_request.c
    model/delete_messages_response.c
    model/delete_my_commands_request.c
    model/delete_my_commands_response.c
    model/delete_sticker_from_set_request.c
    model/delete_sticker_from_set_response.c
    model/delete_sticker_set_request.c
    model/delete_sticker_set_response.c
    model/delete_story_request.c
    model/delete_story_response.c
    model/delete_webhook_request.c
    model/delete_webhook_response.c
    model/dice.c
    model/document.c
    model/edit_chat_invite_link_request.c
    model/edit_chat_invite_link_response.c
    model/edit_chat_subscription_invite_link_request.c
    model/edit_chat_subscription_invite_link_response.c
    model/edit_forum_topic_request.c
    model/edit_forum_topic_response.c
    model/edit_general_forum_topic_request.c
    model/edit_general_forum_topic_response.c
    model/edit_message_caption_request.c
    model/edit_message_caption_response.c
    model/edit_message_live_location_request.c
    model/edit_message_live_location_response.c
    model/edit_message_media_request.c
    model/edit_message_media_response.c
    model/edit_message_reply_markup_request.c
    model/edit_message_reply_markup_response.c
    model/edit_message_text_request.c
    model/edit_message_text_request_chat_id.c
    model/edit_message_text_response.c
    model/edit_message_text_response_result.c
    model/edit_story_request.c
    model/edit_story_response.c
    model/edit_user_star_subscription_request.c
    model/edit_user_star_subscription_response.c
    model/encrypted_credentials.c
    model/encrypted_passport_element.c
    model/error.c
    model/export_chat_invite_link_request.c
    model/export_chat_invite_link_response.c
    model/external_reply_info.c
    model/file.c
    model/force_reply.c
    model/forum_topic.c
    model/forum_topic_created.c
    model/forum_topic_edited.c
    model/forward_message_request.c
    model/forward_message_request_from_chat_id.c
    model/forward_message_response.c
    model/forward_messages_request.c
    model/forward_messages_request_from_chat_id.c
    model/forward_messages_response.c
    model/game.c
    model/game_high_score.c
    model/get_available_gifts_response.c
    model/get_business_account_gifts_request.c
    model/get_business_account_gifts_response.c
    model/get_business_account_star_balance_request.c
    model/get_business_account_star_balance_response.c
    model/get_business_connection_request.c
    model/get_business_connection_response.c
    model/get_chat_administrators_request.c
    model/get_chat_administrators_response.c
    model/get_chat_member_count_request.c
    model/get_chat_member_count_response.c
    model/get_chat_member_request.c
    model/get_chat_member_response.c
    model/get_chat_menu_button_request.c
    model/get_chat_menu_button_response.c
    model/get_chat_request.c
    model/get_chat_response.c
    model/get_custom_emoji_stickers_request.c
    model/get_custom_emoji_stickers_response.c
    model/get_file_request.c
    model/get_file_response.c
    model/get_forum_topic_icon_stickers_response.c
    model/get_game_high_scores_request.c
    model/get_game_high_scores_response.c
    model/get_me_response.c
    model/get_my_commands_request.c
    model/get_my_commands_response.c
    model/get_my_default_administrator_rights_request.c
    model/get_my_default_administrator_rights_response.c
    model/get_my_description_request.c
    model/get_my_description_response.c
    model/get_my_name_request.c
    model/get_my_name_response.c
    model/get_my_short_description_request.c
    model/get_my_short_description_response.c
    model/get_star_transactions_request.c
    model/get_star_transactions_response.c
    model/get_sticker_set_request.c
    model/get_sticker_set_response.c
    model/get_updates_request.c
    model/get_updates_response.c
    model/get_user_chat_boosts_request.c
    model/get_user_chat_boosts_request_chat_id.c
    model/get_user_chat_boosts_response.c
    model/get_user_profile_photos_request.c
    model/get_user_profile_photos_response.c
    model/get_webhook_info_response.c
    model/gift.c
    model/gift_info.c
    model/gift_premium_subscription_request.c
    model/gift_premium_subscription_response.c
    model/gifts.c
    model/giveaway.c
    model/giveaway_completed.c
    model/giveaway_created.c
    model/giveaway_winners.c
    model/hide_general_forum_topic_request.c
    model/hide_general_forum_topic_response.c
    model/inaccessible_message.c
    model/inline_keyboard_button.c
    model/inline_keyboard_markup.c
    model/inline_query.c
    model/inline_query_result.c
    model/inline_query_result_article.c
    model/inline_query_result_audio.c
    model/inline_query_result_cached_audio.c
    model/inline_query_result_cached_document.c
    model/inline_query_result_cached_gif.c
    model/inline_query_result_cached_mpeg4_gif.c
    model/inline_query_result_cached_photo.c
    model/inline_query_result_cached_sticker.c
    model/inline_query_result_cached_video.c
    model/inline_query_result_cached_voice.c
    model/inline_query_result_contact.c
    model/inline_query_result_document.c
    model/inline_query_result_game.c
    model/inline_query_result_gif.c
    model/inline_query_result_location.c
    model/inline_query_result_mpeg4_gif.c
    model/inline_query_result_photo.c
    model/inline_query_result_venue.c
    model/inline_query_result_video.c
    model/inline_query_result_voice.c
    model/inline_query_results_button.c
    model/input_contact_message_content.c
    model/input_invoice_message_content.c
    model/input_location_message_content.c
    model/input_media.c
    model/input_media_animation.c
    model/input_media_audio.c
    model/input_media_document.c
    model/input_media_photo.c
    model/input_media_video.c
    model/input_message_content.c
    model/input_paid_media.c
    model/input_paid_media_photo.c
    model/input_paid_media_video.c
    model/input_poll_option.c
    model/input_profile_photo.c
    model/input_profile_photo_animated.c
    model/input_profile_photo_static.c
    model/input_sticker.c
    model/input_story_content.c
    model/input_story_content_photo.c
    model/input_story_content_video.c
    model/input_text_message_content.c
    model/input_venue_message_content.c
    model/invoice.c
    model/keyboard_button.c
    model/keyboard_button_poll_type.c
    model/keyboard_button_request_chat.c
    model/keyboard_button_request_users.c
    model/labeled_price.c
    model/leave_chat_request.c
    model/leave_chat_request_chat_id.c
    model/leave_chat_response.c
    model/link_preview_options.c
    model/location.c
    model/location_address.c
    model/log_out_response.c
    model/login_url.c
    model/mask_position.c
    model/maybe_inaccessible_message.c
    model/menu_button.c
    model/menu_button_commands.c
    model/menu_button_default.c
    model/menu_button_web_app.c
    model/message.c
    model/message_auto_delete_timer_changed.c
    model/message_entity.c
    model/message_id.c
    model/message_origin.c
    model/message_origin_channel.c
    model/message_origin_chat.c
    model/message_origin_hidden_user.c
    model/message_origin_user.c
    model/message_reaction_count_updated.c
    model/message_reaction_updated.c
    model/order_info.c
    model/owned_gift.c
    model/owned_gift_regular.c
    model/owned_gift_unique.c
    model/owned_gifts.c
    model/paid_media.c
    model/paid_media_info.c
    model/paid_media_photo.c
    model/paid_media_preview.c
    model/paid_media_purchased.c
    model/paid_media_video.c
    model/paid_message_price_changed.c
    model/passport_data.c
    model/passport_element_error.c
    model/passport_element_error_data_field.c
    model/passport_element_error_file.c
    model/passport_element_error_files.c
    model/passport_element_error_front_side.c
    model/passport_element_error_reverse_side.c
    model/passport_element_error_selfie.c
    model/passport_element_error_translation_file.c
    model/passport_element_error_translation_files.c
    model/passport_element_error_unspecified.c
    model/passport_file.c
    model/photo_size.c
    model/pin_chat_message_request.c
    model/pin_chat_message_response.c
    model/poll.c
    model/poll_answer.c
    model/poll_option.c
    model/post_story_request.c
    model/post_story_response.c
    model/pre_checkout_query.c
    model/prepared_inline_message.c
    model/promote_chat_member_request.c
    model/promote_chat_member_response.c
    model/proximity_alert_triggered.c
    model/reaction_count.c
    model/reaction_type.c
    model/reaction_type_custom_emoji.c
    model/reaction_type_emoji.c
    model/reaction_type_paid.c
    model/read_business_message_request.c
    model/read_business_message_response.c
    model/refund_star_payment_request.c
    model/refund_star_payment_response.c
    model/refunded_payment.c
    model/remove_business_account_profile_photo_request.c
    model/remove_business_account_profile_photo_response.c
    model/remove_chat_verification_request.c
    model/remove_chat_verification_response.c
    model/remove_user_verification_request.c
    model/remove_user_verification_response.c
    model/reopen_forum_topic_request.c
    model/reopen_forum_topic_response.c
    model/reopen_general_forum_topic_request.c
    model/reopen_general_forum_topic_response.c
    model/replace_sticker_in_set_request.c
    model/replace_sticker_in_set_response.c
    model/reply_keyboard_markup.c
    model/reply_keyboard_remove.c
    model/reply_parameters.c
    model/reply_parameters_chat_id.c
    model/response_parameters.c
    model/restrict_chat_member_request.c
    model/restrict_chat_member_response.c
    model/revenue_withdrawal_state.c
    model/revenue_withdrawal_state_failed.c
    model/revenue_withdrawal_state_pending.c
    model/revenue_withdrawal_state_succeeded.c
    model/revoke_chat_invite_link_request.c
    model/revoke_chat_invite_link_request_chat_id.c
    model/revoke_chat_invite_link_response.c
    model/save_prepared_inline_message_request.c
    model/save_prepared_inline_message_response.c
    model/send_animation_request.c
    model/send_animation_response.c
    model/send_audio_request.c
    model/send_audio_response.c
    model/send_chat_action_request.c
    model/send_chat_action_response.c
    model/send_contact_request.c
    model/send_contact_response.c
    model/send_dice_request.c
    model/send_dice_response.c
    model/send_document_request.c
    model/send_document_response.c
    model/send_game_request.c
    model/send_game_response.c
    model/send_gift_request.c
    model/send_gift_request_chat_id.c
    model/send_gift_response.c
    model/send_invoice_request.c
    model/send_invoice_response.c
    model/send_location_request.c
    model/send_location_response.c
    model/send_media_group_request.c
    model/send_media_group_request_media_inner.c
    model/send_media_group_response.c
    model/send_message_request.c
    model/send_message_request_chat_id.c
    model/send_message_request_reply_markup.c
    model/send_message_response.c
    model/send_paid_media_request.c
    model/send_paid_media_request_chat_id.c
    model/send_paid_media_response.c
    model/send_photo_request.c
    model/send_photo_response.c
    model/send_poll_request.c
    model/send_poll_response.c
    model/send_sticker_request.c
    model/send_sticker_response.c
    model/send_venue_request.c
    model/send_venue_response.c
    model/send_video_note_request.c
    model/send_video_note_response.c
    model/send_video_request.c
    model/send_video_response.c
    model/send_voice_request.c
    model/send_voice_response.c
    model/sent_web_app_message.c
    model/set_business_account_bio_request.c
    model/set_business_account_bio_response.c
    model/set_business_account_gift_settings_request.c
    model/set_business_account_gift_settings_response.c
    model/set_business_account_name_request.c
    model/set_business_account_name_response.c
    model/set_business_account_profile_photo_request.c
    model/set_business_account_profile_photo_response.c
    model/set_business_account_username_request.c
    model/set_business_account_username_response.c
    model/set_chat_administrator_custom_title_request.c
    model/set_chat_administrator_custom_title_response.c
    model/set_chat_description_request.c
    model/set_chat_description_response.c
    model/set_chat_menu_button_request.c
    model/set_chat_menu_button_response.c
    model/set_chat_permissions_request.c
    model/set_chat_permissions_response.c
    model/set_chat_photo_request.c
    model/set_chat_photo_response.c
    model/set_chat_sticker_set_request.c
    model/set_chat_sticker_set_response.c
    model/set_chat_title_request.c
    model/set_chat_title_response.c
    model/set_custom_emoji_sticker_set_thumbnail_request.c
    model/set_custom_emoji_sticker_set_thumbnail_response.c
    model/set_game_score_request.c
    model/set_game_score_response.c
    model/set_message_reaction_request.c
    model/set_message_reaction_response.c
    model/set_my_commands_request.c
    model/set_my_commands_response.c
    model/set_my_default_administrator_rights_request.c
    model/set_my_default_administrator_rights_response.c
    model/set_my_description_request.c
    model/set_my_description_response.c
    model/set_my_name_request.c
    model/set_my_name_response.c
    model/set_my_short_description_request.c
    model/set_my_short_description_response.c
    model/set_passport_data_errors_request.c
    model/set_passport_data_errors_response.c
    model/set_sticker_emoji_list_request.c
    model/set_sticker_emoji_list_response.c
    model/set_sticker_keywords_request.c
    model/set_sticker_keywords_response.c
    model/set_sticker_mask_position_request.c
    model/set_sticker_mask_position_response.c
    model/set_sticker_position_in_set_request.c
    model/set_sticker_position_in_set_response.c
    model/set_sticker_set_thumbnail_request.c
    model/set_sticker_set_thumbnail_response.c
    model/set_sticker_set_title_request.c
    model/set_sticker_set_title_response.c
    model/set_user_emoji_status_request.c
    model/set_user_emoji_status_response.c
    model/set_webhook_request.c
    model/set_webhook_response.c
    model/shared_user.c
    model/shipping_address.c
    model/shipping_option.c
    model/shipping_query.c
    model/star_amount.c
    model/star_transaction.c
    model/star_transactions.c
    model/sticker.c
    model/sticker_set.c
    model/stop_message_live_location_request.c
    model/stop_message_live_location_response.c
    model/stop_poll_request.c
    model/stop_poll_response.c
    model/story.c
    model/story_area.c
    model/story_area_position.c
    model/story_area_type.c
    model/story_area_type_link.c
    model/story_area_type_location.c
    model/story_area_type_suggested_reaction.c
    model/story_area_type_unique_gift.c
    model/story_area_type_weather.c
    model/successful_payment.c
    model/switch_inline_query_chosen_chat.c
    model/text_quote.c
    model/transaction_partner.c
    model/transaction_partner_affiliate_program.c
    model/transaction_partner_chat.c
    model/transaction_partner_fragment.c
    model/transaction_partner_other.c
    model/transaction_partner_telegram_ads.c
    model/transaction_partner_telegram_api.c
    model/transaction_partner_user.c
    model/transfer_business_account_stars_request.c
    model/transfer_business_account_stars_response.c
    model/transfer_gift_request.c
    model/transfer_gift_response.c
    model/unban_chat_member_request.c
    model/unban_chat_member_response.c
    model/unban_chat_sender_chat_request.c
    model/unban_chat_sender_chat_response.c
    model/unhide_general_forum_topic_request.c
    model/unhide_general_forum_topic_response.c
    model/unique_gift.c
    model/unique_gift_backdrop.c
    model/unique_gift_backdrop_colors.c
    model/unique_gift_info.c
    model/unique_gift_model.c
    model/unique_gift_symbol.c
    model/unpin_all_chat_messages_request.c
    model/unpin_all_chat_messages_response.c
    model/unpin_all_forum_topic_messages_request.c
    model/unpin_all_forum_topic_messages_response.c
    model/unpin_all_general_forum_topic_messages_request.c
    model/unpin_all_general_forum_topic_messages_response.c
    model/unpin_chat_message_request.c
    model/unpin_chat_message_response.c
    model/update.c
    model/upgrade_gift_request.c
    model/upgrade_gift_response.c
    model/upload_sticker_file_request.c
    model/upload_sticker_file_response.c
    model/user.c
    model/user_chat_boosts.c
    model/user_profile_photos.c
    model/users_shared.c
    model/venue.c
    model/verify_chat_request.c
    model/verify_chat_response.c
    model/verify_user_request.c
    model/verify_user_response.c
    model/video.c
    model/video_chat_ended.c
    model/video_chat_participants_invited.c
    model/video_chat_scheduled.c
    model/video_note.c
    model/voice.c
    model/web_app_data.c
    model/web_app_info.c
    model/webhook_info.c
    model/write_access_allowed.c
    api/DefaultAPI.c

)

set(HDRS
    include/apiClient.h
    include/list.h
    include/binary.h
    include/keyValuePair.h
    external/cJSON.h
    model/object.h
    model/any_type.h
    model/accepted_gift_types.h
    model/add_sticker_to_set_request.h
    model/add_sticker_to_set_response.h
    model/affiliate_info.h
    model/animation.h
    model/answer_callback_query_request.h
    model/answer_callback_query_response.h
    model/answer_inline_query_request.h
    model/answer_inline_query_response.h
    model/answer_pre_checkout_query_request.h
    model/answer_pre_checkout_query_response.h
    model/answer_shipping_query_request.h
    model/answer_shipping_query_response.h
    model/answer_web_app_query_request.h
    model/answer_web_app_query_response.h
    model/approve_chat_join_request_request.h
    model/approve_chat_join_request_response.h
    model/audio.h
    model/background_fill.h
    model/background_fill_freeform_gradient.h
    model/background_fill_gradient.h
    model/background_fill_solid.h
    model/background_type.h
    model/background_type_chat_theme.h
    model/background_type_fill.h
    model/background_type_pattern.h
    model/background_type_wallpaper.h
    model/ban_chat_member_request.h
    model/ban_chat_member_request_chat_id.h
    model/ban_chat_member_response.h
    model/ban_chat_sender_chat_request.h
    model/ban_chat_sender_chat_response.h
    model/birthdate.h
    model/bot_command.h
    model/bot_command_scope.h
    model/bot_command_scope_all_chat_administrators.h
    model/bot_command_scope_all_group_chats.h
    model/bot_command_scope_all_private_chats.h
    model/bot_command_scope_chat.h
    model/bot_command_scope_chat_administrators.h
    model/bot_command_scope_chat_chat_id.h
    model/bot_command_scope_chat_member.h
    model/bot_command_scope_default.h
    model/bot_description.h
    model/bot_name.h
    model/bot_short_description.h
    model/business_bot_rights.h
    model/business_connection.h
    model/business_intro.h
    model/business_location.h
    model/business_messages_deleted.h
    model/business_opening_hours.h
    model/business_opening_hours_interval.h
    model/callback_query.h
    model/chat.h
    model/chat_administrator_rights.h
    model/chat_background.h
    model/chat_boost.h
    model/chat_boost_added.h
    model/chat_boost_removed.h
    model/chat_boost_source.h
    model/chat_boost_source_gift_code.h
    model/chat_boost_source_giveaway.h
    model/chat_boost_source_premium.h
    model/chat_boost_updated.h
    model/chat_full_info.h
    model/chat_invite_link.h
    model/chat_join_request.h
    model/chat_location.h
    model/chat_member.h
    model/chat_member_administrator.h
    model/chat_member_banned.h
    model/chat_member_left.h
    model/chat_member_member.h
    model/chat_member_owner.h
    model/chat_member_restricted.h
    model/chat_member_updated.h
    model/chat_permissions.h
    model/chat_photo.h
    model/chat_shared.h
    model/chosen_inline_result.h
    model/close_forum_topic_request.h
    model/close_forum_topic_response.h
    model/close_general_forum_topic_request.h
    model/close_general_forum_topic_response.h
    model/close_response.h
    model/contact.h
    model/convert_gift_to_stars_request.h
    model/convert_gift_to_stars_response.h
    model/copy_message_request.h
    model/copy_message_response.h
    model/copy_messages_request.h
    model/copy_messages_response.h
    model/copy_text_button.h
    model/create_chat_invite_link_request.h
    model/create_chat_invite_link_response.h
    model/create_chat_subscription_invite_link_request.h
    model/create_chat_subscription_invite_link_request_chat_id.h
    model/create_chat_subscription_invite_link_response.h
    model/create_forum_topic_request.h
    model/create_forum_topic_response.h
    model/create_invoice_link_request.h
    model/create_invoice_link_response.h
    model/create_new_sticker_set_request.h
    model/create_new_sticker_set_response.h
    model/decline_chat_join_request_request.h
    model/decline_chat_join_request_response.h
    model/delete_business_messages_request.h
    model/delete_business_messages_response.h
    model/delete_chat_photo_request.h
    model/delete_chat_photo_response.h
    model/delete_chat_sticker_set_request.h
    model/delete_chat_sticker_set_response.h
    model/delete_forum_topic_request.h
    model/delete_forum_topic_response.h
    model/delete_message_request.h
    model/delete_message_response.h
    model/delete_messages_request.h
    model/delete_messages_response.h
    model/delete_my_commands_request.h
    model/delete_my_commands_response.h
    model/delete_sticker_from_set_request.h
    model/delete_sticker_from_set_response.h
    model/delete_sticker_set_request.h
    model/delete_sticker_set_response.h
    model/delete_story_request.h
    model/delete_story_response.h
    model/delete_webhook_request.h
    model/delete_webhook_response.h
    model/dice.h
    model/document.h
    model/edit_chat_invite_link_request.h
    model/edit_chat_invite_link_response.h
    model/edit_chat_subscription_invite_link_request.h
    model/edit_chat_subscription_invite_link_response.h
    model/edit_forum_topic_request.h
    model/edit_forum_topic_response.h
    model/edit_general_forum_topic_request.h
    model/edit_general_forum_topic_response.h
    model/edit_message_caption_request.h
    model/edit_message_caption_response.h
    model/edit_message_live_location_request.h
    model/edit_message_live_location_response.h
    model/edit_message_media_request.h
    model/edit_message_media_response.h
    model/edit_message_reply_markup_request.h
    model/edit_message_reply_markup_response.h
    model/edit_message_text_request.h
    model/edit_message_text_request_chat_id.h
    model/edit_message_text_response.h
    model/edit_message_text_response_result.h
    model/edit_story_request.h
    model/edit_story_response.h
    model/edit_user_star_subscription_request.h
    model/edit_user_star_subscription_response.h
    model/encrypted_credentials.h
    model/encrypted_passport_element.h
    model/error.h
    model/export_chat_invite_link_request.h
    model/export_chat_invite_link_response.h
    model/external_reply_info.h
    model/file.h
    model/force_reply.h
    model/forum_topic.h
    model/forum_topic_created.h
    model/forum_topic_edited.h
    model/forward_message_request.h
    model/forward_message_request_from_chat_id.h
    model/forward_message_response.h
    model/forward_messages_request.h
    model/forward_messages_request_from_chat_id.h
    model/forward_messages_response.h
    model/game.h
    model/game_high_score.h
    model/get_available_gifts_response.h
    model/get_business_account_gifts_request.h
    model/get_business_account_gifts_response.h
    model/get_business_account_star_balance_request.h
    model/get_business_account_star_balance_response.h
    model/get_business_connection_request.h
    model/get_business_connection_response.h
    model/get_chat_administrators_request.h
    model/get_chat_administrators_response.h
    model/get_chat_member_count_request.h
    model/get_chat_member_count_response.h
    model/get_chat_member_request.h
    model/get_chat_member_response.h
    model/get_chat_menu_button_request.h
    model/get_chat_menu_button_response.h
    model/get_chat_request.h
    model/get_chat_response.h
    model/get_custom_emoji_stickers_request.h
    model/get_custom_emoji_stickers_response.h
    model/get_file_request.h
    model/get_file_response.h
    model/get_forum_topic_icon_stickers_response.h
    model/get_game_high_scores_request.h
    model/get_game_high_scores_response.h
    model/get_me_response.h
    model/get_my_commands_request.h
    model/get_my_commands_response.h
    model/get_my_default_administrator_rights_request.h
    model/get_my_default_administrator_rights_response.h
    model/get_my_description_request.h
    model/get_my_description_response.h
    model/get_my_name_request.h
    model/get_my_name_response.h
    model/get_my_short_description_request.h
    model/get_my_short_description_response.h
    model/get_star_transactions_request.h
    model/get_star_transactions_response.h
    model/get_sticker_set_request.h
    model/get_sticker_set_response.h
    model/get_updates_request.h
    model/get_updates_response.h
    model/get_user_chat_boosts_request.h
    model/get_user_chat_boosts_request_chat_id.h
    model/get_user_chat_boosts_response.h
    model/get_user_profile_photos_request.h
    model/get_user_profile_photos_response.h
    model/get_webhook_info_response.h
    model/gift.h
    model/gift_info.h
    model/gift_premium_subscription_request.h
    model/gift_premium_subscription_response.h
    model/gifts.h
    model/giveaway.h
    model/giveaway_completed.h
    model/giveaway_created.h
    model/giveaway_winners.h
    model/hide_general_forum_topic_request.h
    model/hide_general_forum_topic_response.h
    model/inaccessible_message.h
    model/inline_keyboard_button.h
    model/inline_keyboard_markup.h
    model/inline_query.h
    model/inline_query_result.h
    model/inline_query_result_article.h
    model/inline_query_result_audio.h
    model/inline_query_result_cached_audio.h
    model/inline_query_result_cached_document.h
    model/inline_query_result_cached_gif.h
    model/inline_query_result_cached_mpeg4_gif.h
    model/inline_query_result_cached_photo.h
    model/inline_query_result_cached_sticker.h
    model/inline_query_result_cached_video.h
    model/inline_query_result_cached_voice.h
    model/inline_query_result_contact.h
    model/inline_query_result_document.h
    model/inline_query_result_game.h
    model/inline_query_result_gif.h
    model/inline_query_result_location.h
    model/inline_query_result_mpeg4_gif.h
    model/inline_query_result_photo.h
    model/inline_query_result_venue.h
    model/inline_query_result_video.h
    model/inline_query_result_voice.h
    model/inline_query_results_button.h
    model/input_contact_message_content.h
    model/input_invoice_message_content.h
    model/input_location_message_content.h
    model/input_media.h
    model/input_media_animation.h
    model/input_media_audio.h
    model/input_media_document.h
    model/input_media_photo.h
    model/input_media_video.h
    model/input_message_content.h
    model/input_paid_media.h
    model/input_paid_media_photo.h
    model/input_paid_media_video.h
    model/input_poll_option.h
    model/input_profile_photo.h
    model/input_profile_photo_animated.h
    model/input_profile_photo_static.h
    model/input_sticker.h
    model/input_story_content.h
    model/input_story_content_photo.h
    model/input_story_content_video.h
    model/input_text_message_content.h
    model/input_venue_message_content.h
    model/invoice.h
    model/keyboard_button.h
    model/keyboard_button_poll_type.h
    model/keyboard_button_request_chat.h
    model/keyboard_button_request_users.h
    model/labeled_price.h
    model/leave_chat_request.h
    model/leave_chat_request_chat_id.h
    model/leave_chat_response.h
    model/link_preview_options.h
    model/location.h
    model/location_address.h
    model/log_out_response.h
    model/login_url.h
    model/mask_position.h
    model/maybe_inaccessible_message.h
    model/menu_button.h
    model/menu_button_commands.h
    model/menu_button_default.h
    model/menu_button_web_app.h
    model/message.h
    model/message_auto_delete_timer_changed.h
    model/message_entity.h
    model/message_id.h
    model/message_origin.h
    model/message_origin_channel.h
    model/message_origin_chat.h
    model/message_origin_hidden_user.h
    model/message_origin_user.h
    model/message_reaction_count_updated.h
    model/message_reaction_updated.h
    model/order_info.h
    model/owned_gift.h
    model/owned_gift_regular.h
    model/owned_gift_unique.h
    model/owned_gifts.h
    model/paid_media.h
    model/paid_media_info.h
    model/paid_media_photo.h
    model/paid_media_preview.h
    model/paid_media_purchased.h
    model/paid_media_video.h
    model/paid_message_price_changed.h
    model/passport_data.h
    model/passport_element_error.h
    model/passport_element_error_data_field.h
    model/passport_element_error_file.h
    model/passport_element_error_files.h
    model/passport_element_error_front_side.h
    model/passport_element_error_reverse_side.h
    model/passport_element_error_selfie.h
    model/passport_element_error_translation_file.h
    model/passport_element_error_translation_files.h
    model/passport_element_error_unspecified.h
    model/passport_file.h
    model/photo_size.h
    model/pin_chat_message_request.h
    model/pin_chat_message_response.h
    model/poll.h
    model/poll_answer.h
    model/poll_option.h
    model/post_story_request.h
    model/post_story_response.h
    model/pre_checkout_query.h
    model/prepared_inline_message.h
    model/promote_chat_member_request.h
    model/promote_chat_member_response.h
    model/proximity_alert_triggered.h
    model/reaction_count.h
    model/reaction_type.h
    model/reaction_type_custom_emoji.h
    model/reaction_type_emoji.h
    model/reaction_type_paid.h
    model/read_business_message_request.h
    model/read_business_message_response.h
    model/refund_star_payment_request.h
    model/refund_star_payment_response.h
    model/refunded_payment.h
    model/remove_business_account_profile_photo_request.h
    model/remove_business_account_profile_photo_response.h
    model/remove_chat_verification_request.h
    model/remove_chat_verification_response.h
    model/remove_user_verification_request.h
    model/remove_user_verification_response.h
    model/reopen_forum_topic_request.h
    model/reopen_forum_topic_response.h
    model/reopen_general_forum_topic_request.h
    model/reopen_general_forum_topic_response.h
    model/replace_sticker_in_set_request.h
    model/replace_sticker_in_set_response.h
    model/reply_keyboard_markup.h
    model/reply_keyboard_remove.h
    model/reply_parameters.h
    model/reply_parameters_chat_id.h
    model/response_parameters.h
    model/restrict_chat_member_request.h
    model/restrict_chat_member_response.h
    model/revenue_withdrawal_state.h
    model/revenue_withdrawal_state_failed.h
    model/revenue_withdrawal_state_pending.h
    model/revenue_withdrawal_state_succeeded.h
    model/revoke_chat_invite_link_request.h
    model/revoke_chat_invite_link_request_chat_id.h
    model/revoke_chat_invite_link_response.h
    model/save_prepared_inline_message_request.h
    model/save_prepared_inline_message_response.h
    model/send_animation_request.h
    model/send_animation_response.h
    model/send_audio_request.h
    model/send_audio_response.h
    model/send_chat_action_request.h
    model/send_chat_action_response.h
    model/send_contact_request.h
    model/send_contact_response.h
    model/send_dice_request.h
    model/send_dice_response.h
    model/send_document_request.h
    model/send_document_response.h
    model/send_game_request.h
    model/send_game_response.h
    model/send_gift_request.h
    model/send_gift_request_chat_id.h
    model/send_gift_response.h
    model/send_invoice_request.h
    model/send_invoice_response.h
    model/send_location_request.h
    model/send_location_response.h
    model/send_media_group_request.h
    model/send_media_group_request_media_inner.h
    model/send_media_group_response.h
    model/send_message_request.h
    model/send_message_request_chat_id.h
    model/send_message_request_reply_markup.h
    model/send_message_response.h
    model/send_paid_media_request.h
    model/send_paid_media_request_chat_id.h
    model/send_paid_media_response.h
    model/send_photo_request.h
    model/send_photo_response.h
    model/send_poll_request.h
    model/send_poll_response.h
    model/send_sticker_request.h
    model/send_sticker_response.h
    model/send_venue_request.h
    model/send_venue_response.h
    model/send_video_note_request.h
    model/send_video_note_response.h
    model/send_video_request.h
    model/send_video_response.h
    model/send_voice_request.h
    model/send_voice_response.h
    model/sent_web_app_message.h
    model/set_business_account_bio_request.h
    model/set_business_account_bio_response.h
    model/set_business_account_gift_settings_request.h
    model/set_business_account_gift_settings_response.h
    model/set_business_account_name_request.h
    model/set_business_account_name_response.h
    model/set_business_account_profile_photo_request.h
    model/set_business_account_profile_photo_response.h
    model/set_business_account_username_request.h
    model/set_business_account_username_response.h
    model/set_chat_administrator_custom_title_request.h
    model/set_chat_administrator_custom_title_response.h
    model/set_chat_description_request.h
    model/set_chat_description_response.h
    model/set_chat_menu_button_request.h
    model/set_chat_menu_button_response.h
    model/set_chat_permissions_request.h
    model/set_chat_permissions_response.h
    model/set_chat_photo_request.h
    model/set_chat_photo_response.h
    model/set_chat_sticker_set_request.h
    model/set_chat_sticker_set_response.h
    model/set_chat_title_request.h
    model/set_chat_title_response.h
    model/set_custom_emoji_sticker_set_thumbnail_request.h
    model/set_custom_emoji_sticker_set_thumbnail_response.h
    model/set_game_score_request.h
    model/set_game_score_response.h
    model/set_message_reaction_request.h
    model/set_message_reaction_response.h
    model/set_my_commands_request.h
    model/set_my_commands_response.h
    model/set_my_default_administrator_rights_request.h
    model/set_my_default_administrator_rights_response.h
    model/set_my_description_request.h
    model/set_my_description_response.h
    model/set_my_name_request.h
    model/set_my_name_response.h
    model/set_my_short_description_request.h
    model/set_my_short_description_response.h
    model/set_passport_data_errors_request.h
    model/set_passport_data_errors_response.h
    model/set_sticker_emoji_list_request.h
    model/set_sticker_emoji_list_response.h
    model/set_sticker_keywords_request.h
    model/set_sticker_keywords_response.h
    model/set_sticker_mask_position_request.h
    model/set_sticker_mask_position_response.h
    model/set_sticker_position_in_set_request.h
    model/set_sticker_position_in_set_response.h
    model/set_sticker_set_thumbnail_request.h
    model/set_sticker_set_thumbnail_response.h
    model/set_sticker_set_title_request.h
    model/set_sticker_set_title_response.h
    model/set_user_emoji_status_request.h
    model/set_user_emoji_status_response.h
    model/set_webhook_request.h
    model/set_webhook_response.h
    model/shared_user.h
    model/shipping_address.h
    model/shipping_option.h
    model/shipping_query.h
    model/star_amount.h
    model/star_transaction.h
    model/star_transactions.h
    model/sticker.h
    model/sticker_set.h
    model/stop_message_live_location_request.h
    model/stop_message_live_location_response.h
    model/stop_poll_request.h
    model/stop_poll_response.h
    model/story.h
    model/story_area.h
    model/story_area_position.h
    model/story_area_type.h
    model/story_area_type_link.h
    model/story_area_type_location.h
    model/story_area_type_suggested_reaction.h
    model/story_area_type_unique_gift.h
    model/story_area_type_weather.h
    model/successful_payment.h
    model/switch_inline_query_chosen_chat.h
    model/text_quote.h
    model/transaction_partner.h
    model/transaction_partner_affiliate_program.h
    model/transaction_partner_chat.h
    model/transaction_partner_fragment.h
    model/transaction_partner_other.h
    model/transaction_partner_telegram_ads.h
    model/transaction_partner_telegram_api.h
    model/transaction_partner_user.h
    model/transfer_business_account_stars_request.h
    model/transfer_business_account_stars_response.h
    model/transfer_gift_request.h
    model/transfer_gift_response.h
    model/unban_chat_member_request.h
    model/unban_chat_member_response.h
    model/unban_chat_sender_chat_request.h
    model/unban_chat_sender_chat_response.h
    model/unhide_general_forum_topic_request.h
    model/unhide_general_forum_topic_response.h
    model/unique_gift.h
    model/unique_gift_backdrop.h
    model/unique_gift_backdrop_colors.h
    model/unique_gift_info.h
    model/unique_gift_model.h
    model/unique_gift_symbol.h
    model/unpin_all_chat_messages_request.h
    model/unpin_all_chat_messages_response.h
    model/unpin_all_forum_topic_messages_request.h
    model/unpin_all_forum_topic_messages_response.h
    model/unpin_all_general_forum_topic_messages_request.h
    model/unpin_all_general_forum_topic_messages_response.h
    model/unpin_chat_message_request.h
    model/unpin_chat_message_response.h
    model/update.h
    model/upgrade_gift_request.h
    model/upgrade_gift_response.h
    model/upload_sticker_file_request.h
    model/upload_sticker_file_response.h
    model/user.h
    model/user_chat_boosts.h
    model/user_profile_photos.h
    model/users_shared.h
    model/venue.h
    model/verify_chat_request.h
    model/verify_chat_response.h
    model/verify_user_request.h
    model/verify_user_response.h
    model/video.h
    model/video_chat_ended.h
    model/video_chat_participants_invited.h
    model/video_chat_scheduled.h
    model/video_note.h
    model/voice.h
    model/web_app_data.h
    model/web_app_info.h
    model/webhook_info.h
    model/write_access_allowed.h
    api/DefaultAPI.h

)

include(PreTarget.cmake OPTIONAL)

set(PROJECT_VERSION_STRING "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

# Add library with project file with project name as library name
add_library(${pkgName} ${SRCS} ${HDRS})
# Link dependent libraries
if(NOT CMAKE_VERSION VERSION_LESS 3.4)
    target_link_libraries(${pkgName} PRIVATE OpenSSL::SSL OpenSSL::Crypto)
endif()
target_link_libraries(${pkgName} PUBLIC ${CURL_LIBRARIES} )
target_include_directories(
    ${pkgName} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}>
    $<INSTALL_INTERFACE:include>
)

include(PostTarget.cmake OPTIONAL)

# installation of libraries, headers, and config files
if (NOT EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in)
    install(TARGETS ${pkgName} DESTINATION lib)
else()
    include(GNUInstallDirs)
    install(TARGETS ${pkgName} DESTINATION lib EXPORT ${pkgName}Targets)

    foreach(HDR_FILE ${HDRS})
        get_filename_component(HDR_DIRECTORY ${HDR_FILE} DIRECTORY)
        get_filename_component(ABSOLUTE_HDR_DIRECTORY ${HDR_DIRECTORY} ABSOLUTE)
        file(RELATIVE_PATH RELATIVE_HDR_PATH ${CMAKE_CURRENT_SOURCE_DIR} ${ABSOLUTE_HDR_DIRECTORY})
        install(FILES ${HDR_FILE} DESTINATION include/${pkgName}/${RELATIVE_HDR_PATH})
    endforeach()

    include(CMakePackageConfigHelpers)
    write_basic_package_version_file(
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}ConfigVersion.cmake"
            VERSION "${PROJECT_VERSION_STRING}"
            COMPATIBILITY AnyNewerVersion
    )

    export(EXPORT ${pkgName}Targets
            FILE "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Targets.cmake"
            NAMESPACE ${pkgName}::
            )

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Config.cmake"
            @ONLY
            )

    set(ConfigPackageLocation lib/cmake/${pkgName})
    install(EXPORT ${pkgName}Targets
            FILE
            ${pkgName}Targets.cmake
            NAMESPACE
            ${pkgName}::
            DESTINATION
            ${ConfigPackageLocation}
            )
    install(
            FILES
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}Config.cmake"
            "${CMAKE_CURRENT_BINARY_DIR}/${pkgName}/${pkgName}ConfigVersion.cmake"
            DESTINATION
            ${ConfigPackageLocation}
    )
endif()

# make installation packages
include(Packing.cmake OPTIONAL)

# Setting file variables to null
set(SRCS "")
set(HDRS "")


## This section shows how to use the above compiled library to compile the source files
## set source files
#set(SRCS
#    unit-tests/manual-DefaultAPI.c
#)

##set header files
#set(HDRS
#)

## loop over all files in SRCS variable
#foreach(SOURCE_FILE ${SRCS})
#    # Get only the file name from the file as add_executable does not support executable with slash("/")
#    get_filename_component(FILE_NAME_ONLY ${SOURCE_FILE} NAME_WE)
#    # Remove .c from the file name and set it as executable name
#    string( REPLACE ".c" "" EXECUTABLE_FILE ${FILE_NAME_ONLY})
#    # Add executable for every source file in  SRCS
#    add_executable(unit-${EXECUTABLE_FILE} ${SOURCE_FILE})
#    # Link above created library to executable and dependent library curl
#    target_link_libraries(unit-${EXECUTABLE_FILE} ${CURL_LIBRARIES} ${pkgName} )
#endforeach(SOURCE_FILE ${SRCS})
